--- a/styles.css
+++ b/styles.css
@@ -467,3 +467,21 @@ input {
 .memory-slot {
     animation: fadeIn 0.5s ease-in-out;
 }
+
+#loadingOverlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.9);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+}
+
+#loadingOverlay img {
+    width: 100px;
+    height: 100px;
+}
